--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div @click="logout">退出登录</div>
         </ul>
         <ul id="company-info_panel" v-if="companyUserInfo">
-          企业用户信息 {{companyUserInfo.userName`}}
+          企业用户信息 {{companyUserInfo.userName}}
           <div @click="logout">退出登录</div>
         </ul>
 
