--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
               <div class="chair"></div>
               <!--立即沟通-->
               <div class="to-chat" @click="chatToCompany(item.companyName, item.companyId)">立即沟通</div>
+              <div class="to-chat offline">立即沟通（离线）</div>
               <!--TODO 离线以后这里文字要改成离线状态-->
             </div>
             <!--/展位单元-->
