--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <!--/企业搜索条-->
             <!--企业离线在线切换-->
             <ul id="company-status_switch" class="status_switch">
-              <li @click="currentStatus=0" :class="{'active':currentStatus===0}">全部企业</li>
-              <li @click="currentStatus=1" :class="{'active':currentStatus===1}">在线企业</li>
+              <li @click="currentCompanyShowStatus=1" v-if="currentCompanyShowStatus===0" class="active">全部企业</li>
+              <li @click="currentCompanyShowStatus=0" v-if="currentCompanyShowStatus===1" class="active">在线企业</li>
             </ul>
             <!--/企业离线在线切换-->
           </div>
@@ -89,8 +89,8 @@
             <!--/个人搜索条-->
             <!--个人离线在线切换-->
             <ul id="person-status_switch" class="status_switch">
-              <li @click="currentStatus=0" :class="{'active':currentStatus===0}">全部求职者</li>
-              <li @click="currentStatus=1" :class="{'active':currentStatus===1}">在线求职者</li>
+              <li @click="currentPersonShowStatus=1" v-if="currentPersonShowStatus===0" class="active">全部求职者</li>
+              <li @click="currentPersonShowStatus=0" v-if="currentPersonShowStatus===1" class="active">在线求职者</li>
             </ul>
             <!--/个人离线在线切换-->
           </div>
@@ -272,7 +272,7 @@
       <div class="out_panel_top2"></div>
       <div class="out_border_1">
         <div class="out_border_2">
-          <div class="company-list_panel" v-if="companyList">
+          <div class="company-list_panel" v-if="companyList" :class="{'online': currentCompanyShowStatus===1}">
             <!--展位单元-->
             <div class="company-item" v-for="item in companyList" :class="{'offline': !item.lastUpdateDate || moment().diff(moment(item.lastUpdateDate),'minutes')>offlineTimeout}">
               <!--<div style=" z-index: 9999999999; position: absolute; color:#FFF;">{{item.companyId %6}}-{{item.companyId}}-{{(item.companyId%16+1)}}</div>-->
@@ -316,7 +316,6 @@
               <!--立即沟通-->
               <div class="to-chat" @click="chatToCompany(item.companyName, item.companyId)">立即沟通</div>
               <div class="to-chat offline">立即沟通（离线）</div>
-              <!--TODO 离线以后这里文字要改成离线状态-->
             </div>
             <!--/展位单元-->
           </div>
@@ -340,7 +339,7 @@
       <div class="out_border_1">
         <div class="out_border_2">
           <!-- 在线求职者列表 -->
-          <div id="job-seeker_list">
+          <div id="job-seeker_list" :class="{'online': currentPersonShowStatus===1}">
             <div class="job-seeker_item" :class="{'offline':moment().diff(moment(item.lastUpdateDate),'minutes')>offlineTimeout}" v-if="jobSeekerList" v-for="item in jobSeekerList">
               <div class="online_status online">在线</div>
               <div class="online_status offline">离线</div>
